<resources>
    <string name="app_name">Free Draw</string>

    <string name="txt_open_editor_board_button">Open Editor</string>

    <string name="txt_menu_options_new_board_item">New</string>
    <string name="txt_menu_options_insert_board_item">Insert Board</string>
    <string name="txt_menu_options_clear_board_item">Clear</string>
    <string name="txt_menu_options_erase_board_item">Erase</string>
    <string name="txt_menu_options_undo_board_item">Undo</string>
    <string name="txt_menu_options_tools_item">Tools</string>
    <string name="txt_menu_options_save_item">Save</string>
    <string name="txt_menu_options_export_item">Export</string>

    <string name="txt_boards_listing_empty_msg">No Boards Saved!</string>
    <string name="txt_boards_listing_delete_btn">Delete</string>
    <string name="txt_boards_listing_cancel_selection_btn">Cancel</string>

    <string name="txt_delete_boards_dialog_title">Delete Boards</string>
    <string name="txt_delete_boards_dialog_msg">Are you sure you want to delete selected boards?</string>
    <string name="txt_delete_boards_dialog_positive_btn">Yes</string>
    <string name="txt_delete_boards_dialog_negative_btn">No</string>

    <string name="txt_default_new_board_name">New Board</string>
    <string name="txt_tools_dialog_title">Tools</string>

    <string name="txt_board_name_dialog_title_enter_to_save">Save Board</string>
    <string name="txt_board_name_dialog_msg_enter_to_save">Enter Board Name</string>
    <string name="txt_board_name_dialog_positive_enter_to_save">Save</string>
    <string name="txt_board_name_dialog_negative_enter_to_save">Cancel</string>

    <string name="txt_clear_board_dialog_title">Clear Board</string>
    <string name="txt_clear_board_dialog_msg">Are you sure you want to clear board?</string>
    <string name="txt_clear_board_dialog_positive_btn">Yes</string>
    <string name="txt_clear_board_dialog_negative_btn">No</string>

    <string name="txt_text_shape_dialog_title">Text Value</string>
    <string name="txt_text_shape_dialog_msg">Please Enter the text to draw on board</string>
    <string name="txt_text_shape_dialog_positive_btn">Save</string>
    <string name="txt_text_shape_dialog_negative_btn">Cancel</string>

    <string name="txt_toast_export_image_success">Image Saved successfully</string>
    <string name="txt_toast_export_image_failure">Error saving image</string>

    <string name="txt_tools_dialog_shapes_title_label">Select Drawing Shape</string>
    <string name="txt_tools_dialog_free_draw_btn_label">Free Draw</string>
    <string name="txt_tools_dialog_rect_btn_label">Rectangle</string>
    <string name="txt_tools_dialog_circle_btn_label">Circle</string>
    <string name="txt_tools_dialog_line_btn_label">Line</string>
    <string name="txt_tools_dialog_text_btn_label">Text</string>

    <string name="txt_tools_dialog_color_title_label">Select Drawing Color</string>
    <string name="txt_tools_RGB_label">RGB</string>

    <string name="txt_tools_dialog_filling_title_label">Select Filling Color</string>

    <string name="txt_tools_dialog_save_tools_btn_label">Save</string>

    <string name="txt_view_motion_finish_button">Finish</string>
    <string name="txt_view_motion_text_size_hint">Text Size</string>
    <string name="txt_view_motion_apply_text_size_btn">Apply</string>

    <string name="txt_dialog_boards_selection_title">Select Board to insert</string>

    <string name="txt_information_insert_board_dialog_title">Insert Board</string>
    <string name="txt_information_insert_board_dialog_msg">Please Draw Rectangle to define the frame of board to insert</string>
    <string name="txt_information_insert_board_dialog_positive_btn">OK</string>

</resources>
