<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menu_fragment_editor_new_board"
        android:title="@string/txt_menu_options_new_board_item" />

    <item
        android:id="@+id/menu_fragment_editor_clear_board"
        android:title="@string/txt_menu_options_clear_board_item" />

    <item
        android:id="@+id/menu_fragment_editor_erase_board"
        android:title="@string/txt_menu_options_erase_board_item" />

    <item
        android:id="@+id/menu_fragment_editor_undo_board"
        android:title="@string/txt_menu_options_undo_board_item" />

    <item
        android:id="@+id/menu_fragment_editor_tools_board"
        android:title="@string/txt_menu_options_tools_item"/>

    <item
        android:id="@+id/menu_fragment_editor_save_board"
        android:title="@string/txt_menu_options_save_item"/>

    <item
        android:id="@+id/menu_fragment_editor_export_board"
        android:title="@string/txt_menu_options_export_item"/>
</menu>