<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.boards.listing.BoardsListingFragment">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/boards_listing_list_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <TextView
        android:id="@+id/boards_listing_empty_items_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/txt_boards_listing_empty_msg"
        android:textAlignment="center"
        android:visibility="gone"/>


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/boards_listing_open_editor_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/edit"
        style="@style/StyleListFloatingButton"
        android:contentDescription="@string/app_name" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/boards_listing_selection_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:visibility="gone">

        <Button
            android:id="@+id/boards_listing_selection_delete_items_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="@string/txt_boards_listing_delete_btn"
            style="@style/StyleViewMotionActionButton"/>

        <Button
            android:id="@+id/boards_listing_selection_cancel_selection_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="@string/txt_boards_listing_cancel_selection_btn"
            style="@style/StyleViewMotionActionButton"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
